-fixing issues with scrollbar and footer

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -46,3 +46,21 @@ main {
   font-size: 7vh;
   font-family: "Roboto", sans-serif;
 }
+.fancy {
+  @supports (background-clip: text) or (-webkit-background-clip: text) {
+    background-image: 
+      url("https://e0.pxfuel.com/wallpapers/529/468/desktop-wallpaper-color-dark-red-1-dark-red-background-color-thumbnail.jpg");
+    background-size: 110% auto;
+    background-position: center;
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+  }
+}
+.fancy {
+  padding: 0.5em 1em;
+  font-size: 8vh;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1;
+}
