--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -3,8 +3,9 @@ footer {
   color: rgb(255, 255, 255);
   text-align: center;
   padding-block: 10px;
-  position: absolute;
-  bottom: -40px;
+  /* position: absolute; */
+  margin-top: auto;
+  bottom: 0px;
   width: 100%;
   height: 5vh;
 }
